fix: removed unused dependencies